--- a/app/src/main/res/layout/activity_dfpsrtxdata_export.xml
+++ b/app/src/main/res/layout/activity_dfpsrtxdata_export.xml
@@ -33,6 +33,7 @@
             android:background="@color/colorBackground"
             android:textColor="@color/offwhite"
             android:gravity="center|left"
+            android:fontFamily="@font/my_custom_font"
             android:paddingLeft="10dp"/>
 
         <ImageView
