--- a/app/src/main/res/layout/activity_dgpssync_menu.xml
+++ b/app/src/main/res/layout/activity_dgpssync_menu.xml
@@ -25,6 +25,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_weight=".5"
                 android:text="Data Synchronization of "
+                android:fontFamily="@font/my_custom_font"
                 android:textAlignment="center"
                 android:textColor="@color/colorBackground"
                 android:textSize="25sp"
@@ -36,6 +37,7 @@
                 android:layout_height="0dp"
                 android:layout_weight=".5"
                 android:textAlignment="center"
+                android:fontFamily="@font/my_custom_font"
                 android:textColor="@color/colorBackground"
                 android:textSize="25sp"
                 android:textStyle="bold" />
@@ -68,9 +70,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
                     android:gravity="center|bottom"
                     android:textColor="@color/color1"
+                    android:fontFamily="@font/my_custom_font"
                     android:textColorHint="@color/color1"
                     android:textSize="26dp"
                     android:textStyle="bold"
@@ -81,9 +83,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
                     android:gravity="center|top"
                     android:text="Total point"
+                    android:fontFamily="@font/my_custom_font"
                     android:textColor="@color/color1"
                     android:textSize="18dp"
                     android:textStyle="normal" />
@@ -97,6 +99,7 @@
                 android:layout_margin="10dp"
                 android:layout_weight=".5"
                 android:background="@drawable/other_box_cornner"
+
                 android:elevation="5dp"
                 android:orientation="vertical"
                 android:weightSum="1"
@@ -108,9 +111,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
                     android:gravity="center|bottom"
                     android:textColor="@color/color1"
+                    android:fontFamily="@font/my_custom_font"
                     android:textColorHint="@color/color1"
                     android:textSize="26dp"
                     android:textStyle="bold"
@@ -121,10 +124,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
                     android:gravity="center|top"
                     android:text="Synced Point"
                     android:textColor="@color/color1"
+                    android:fontFamily="@font/my_custom_font"
                     android:textSize="18dp"
                     android:textStyle="normal" />
 
@@ -160,10 +163,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
                     android:gravity="center|bottom"
                     android:textColor="@color/color1"
                     android:textColorHint="@color/color1"
+                    android:fontFamily="@font/my_custom_font"
                     android:textSize="26dp"
                     android:textStyle="bold"
 
@@ -173,10 +176,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
                     android:gravity="center|top"
                     android:text="Total image"
                     android:textColor="@color/color1"
+                    android:fontFamily="@font/my_custom_font"
                     android:textSize="18dp"
                     android:textStyle="normal" />
 
@@ -200,10 +203,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
                     android:gravity="center|bottom"
                     android:textColor="@color/color1"
                     android:textColorHint="@color/color1"
+                    android:fontFamily="@font/my_custom_font"
                     android:textSize="26dp"
                     android:textStyle="bold"
 
@@ -213,7 +216,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
+                    android:fontFamily="@font/my_custom_font"
                     android:gravity="center|top"
                     android:text="Synced Image"
                     android:textColor="@color/color1"
@@ -255,7 +258,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
+                    android:fontFamily="@font/my_custom_font"
                     android:gravity="center|bottom"
                     android:textColor="@color/color1"
                     android:textColorHint="@color/color1"
@@ -268,7 +271,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
+                    android:fontFamily="@font/my_custom_font"
                     android:gravity="center|top"
                     android:text="Static file"
                     android:textColor="@color/color1"
@@ -295,7 +298,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
+                    android:fontFamily="@font/my_custom_font"
                     android:gravity="center|bottom"
                     android:textColor="@color/color1"
                     android:textColorHint="@color/color1"
@@ -308,7 +311,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
+                    android:fontFamily="@font/my_custom_font"
                     android:gravity="center|top"
                     android:text="Synced static file"
                     android:textColor="@color/color1"
@@ -347,7 +350,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
+                    android:fontFamily="@font/my_custom_font"
                     android:gravity="center|bottom"
                     android:textColor="@color/color1"
                     android:textColorHint="@color/color1"
@@ -360,7 +363,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
+                    android:fontFamily="@font/my_custom_font"
                     android:gravity="center|top"
                     android:text="RTX file"
                     android:textColor="@color/color1"
@@ -387,7 +390,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
+                    android:fontFamily="@font/my_custom_font"
                     android:gravity="center|bottom"
                     android:textColor="@color/color1"
                     android:textColorHint="@color/color1"
@@ -400,7 +403,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:fontFamily="@font/abeezee"
+                    android:fontFamily="@font/my_custom_font"
                     android:gravity="center|top"
                     android:text="Synced RTX file"
                     android:textColor="@color/color1"
@@ -433,6 +436,7 @@
                 android:layout_weight="1.5"
                 android:background="@drawable/button_drawable"
                 android:text="Sync"
+                android:fontFamily="@font/my_custom_font"
                 android:textColor="@color/white"
                 android:textSize="18dp"/>
             <!--<Button
