--- a/app/src/main/res/layout/add_completion_ststus.xml
+++ b/app/src/main/res/layout/add_completion_ststus.xml
@@ -17,6 +17,7 @@
             android:layout_centerInParent="true"
             android:textAlignment="center"
             android:text="Is DGPS survey of this FB completed?"
+            android:fontFamily="@font/my_custom_font"
             android:textColor="@color/offwhite"
             android:textSize="20dp"
             />
@@ -52,6 +53,7 @@
                     android:enabled="true"
                     android:singleLine="true"
                     android:text="FB Name:"
+                    android:fontFamily="@font/my_custom_font"
                     android:textAlignment="gravity"
                     android:textColor="@color/color1"
                     android:textSize="15sp"
@@ -74,6 +76,7 @@
                     android:layout_height="match_parent"
                     android:enabled="true"
                     android:singleLine="true"
+                    android:fontFamily="@font/my_custom_font"
                     android:textAlignment="gravity"
                     android:textColor="@color/color1"
                     android:textSize="15sp"
@@ -109,6 +112,7 @@
                     android:enabled="true"
                     android:singleLine="true"
                     android:text="FB ID:"
+                    android:fontFamily="@font/my_custom_font"
                     android:textAlignment="gravity"
                     android:textColor="@color/color1"
                     android:textSize="15sp"
@@ -131,6 +135,7 @@
                     android:layout_height="match_parent"
                     android:enabled="true"
                     android:singleLine="true"
+                    android:fontFamily="@font/my_custom_font"
                     android:textAlignment="gravity"
                     android:textColor="@color/color1"
                     android:textSize="15sp"
