--- a/app/src/main/res/layout/activity_choose_survet_type.xml
+++ b/app/src/main/res/layout/activity_choose_survet_type.xml
@@ -25,6 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_weight=".3"
+                android:fontFamily="@font/my_custom_font"
                 android:text="Welcome to DGPS Survey of "
                 android:textAlignment="center"
                 android:textColor="@color/color1"
@@ -35,6 +36,7 @@
                 android:id="@+id/dgpsfbName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/my_custom_font"
                 android:layout_weight=".3"
                 android:textAlignment="center"
                 android:textColor="@color/color1"
@@ -52,7 +54,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:orientation="horizontal"
                 android:weightSum="1">
@@ -60,6 +61,8 @@
                 <ImageView
                     android:id="@+id/data_point_dwld"
                     android:layout_width="0dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/name_textView"
                     android:layout_weight=".5"
@@ -70,6 +73,8 @@
                 <ImageView
                     android:id="@+id/mapview"
                     android:layout_width="0dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/data_point_dwld"
                     android:layout_weight=".5"
@@ -81,7 +86,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:orientation="horizontal"
                 android:weightSum="1">
@@ -89,14 +93,21 @@
                 <ImageView
                     android:id="@+id/exporttofolder"
                     android:layout_width="0dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/dataview"
                     android:layout_weight=".5"
                     android:background="@drawable/tag"
                     android:clickable="true" />
+
                 <ImageView
                     android:id="@+id/synchronize"
                     android:layout_width="0dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/exporttofolder"
                     android:layout_weight=".5"
@@ -108,8 +119,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:orientation="horizontal"
                 android:weightSum="1">
@@ -117,6 +126,9 @@
                 <ImageView
                     android:id="@+id/dataview"
                     android:layout_width="0dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/mapview"
                     android:layout_weight=".5"
@@ -128,10 +140,13 @@
                 <ImageView
                     android:id="@+id/exporttoExcel"
                     android:layout_width="0dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/exporttofolder"
                     android:layout_weight=".5"
-                    android:background="@drawable/export_menu"
+                    android:background="@drawable/revisit"
                     android:clickable="false" />
 
             </LinearLayout>
