--- a/app/src/main/res/layout/activity_dgpsdata_export.xml
+++ b/app/src/main/res/layout/activity_dgpsdata_export.xml
@@ -32,6 +32,7 @@
             android:textSize="25sp"
             android:background="@color/colorBackground"
             android:textColor="@color/offwhite"
+            android:fontFamily="@font/my_custom_font"
             android:gravity="center|left"
             android:paddingLeft="10dp"/>
 
