--- a/app/src/main/res/layout/activity_dgpsdata_tagg_menu.xml
+++ b/app/src/main/res/layout/activity_dgpsdata_tagg_menu.xml
@@ -25,8 +25,9 @@
                 android:layout_height="wrap_content"
                 android:text="Tag Static,RTX and JXL data for"
                 android:textAlignment="center"
-                android:textColor="@color/colorBackground"
+                android:textColor="@color/color1"
                 android:textSize="25sp"
+                android:fontFamily="@font/my_custom_font"
                 android:textStyle="bold" />
 
             <TextView
@@ -35,8 +36,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textColor="@color/colorBackground"
+                android:textColor="@color/color1"
                 android:textSize="25sp"
+                android:fontFamily="@font/my_custom_font"
                 android:textStyle="bold" />
 
         </LinearLayout>
