--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,6 +44,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/cast_expanded_controller_background_color"
                 android:textSize="25sp"
+                android:fontFamily="@font/my_custom_font"
                 android:textStyle="bold" />
 
             <TextView
@@ -54,6 +55,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/cast_expanded_controller_background_color"
                 android:textSize="15sp"
+                android:fontFamily="@font/my_custom_font"
                 android:textStyle="italic" />
         </LinearLayout>
 
@@ -78,6 +80,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:hint="@string/email"
+                    android:fontFamily="@font/my_custom_font"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:textColor="@color/color1"
@@ -104,7 +107,8 @@
                     android:singleLine="true"
                     android:textColor="@color/color1"
                     android:textColorHint="@color/color1"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:fontFamily="@font/my_custom_font"/>
             </android.support.design.widget.TextInputLayout>
 
 
@@ -141,7 +145,8 @@
                             android:singleLine="true"
                             android:textColor="@color/color1"
                             android:textColorHint="@color/color1"
-                            android:textSize="20sp" />
+                            android:textSize="20sp"
+                            android:fontFamily="@font/my_custom_font"/>
                     </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
 
@@ -163,7 +168,8 @@
                         android:text="@string/otp"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:fontFamily="@font/my_custom_font"/>
 
                 </LinearLayout>
             </LinearLayout>
@@ -189,7 +195,9 @@
                 android:text="@string/login"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+
+                android:fontFamily="@font/my_custom_font"/>
         </LinearLayout>
     </LinearLayout>
 
