--- a/app/src/main/res/layout/activity_revisit_dgpsdata_tagg_menu.xml
+++ b/app/src/main/res/layout/activity_revisit_dgpsdata_tagg_menu.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:text="Tag Static,RTX and JXL data for"
                 android:textAlignment="center"
-                android:textColor="@color/colorBackground"
+                android:textColor="@color/color1"
                 android:textSize="25sp"
                 android:textStyle="bold" />
 
@@ -35,7 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textColor="@color/colorBackground"
+                android:textColor="@color/color1"
                 android:textSize="25sp"
                 android:textStyle="bold" />
 
