--- a/app/src/main/res/layout/activity_revisit_dgpssurvey_menu.xml
+++ b/app/src/main/res/layout/activity_revisit_dgpssurvey_menu.xml
@@ -50,7 +50,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:orientation="horizontal"
                 android:weightSum="1">
@@ -58,6 +57,9 @@
                 <ImageView
                     android:id="@+id/data_point_dwld"
                     android:layout_width="0dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/name_textView"
                     android:layout_weight=".5"
@@ -68,6 +70,9 @@
                 <ImageView
                     android:id="@+id/mapview"
                     android:layout_width="0dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/data_point_dwld"
                     android:layout_weight=".5"
@@ -79,7 +84,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:orientation="horizontal"
                 android:weightSum="1">
@@ -87,6 +91,9 @@
                 <ImageView
                     android:id="@+id/exporttofolder"
                     android:layout_width="0dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/dataview"
                     android:layout_weight=".5"
@@ -95,6 +102,9 @@
                 <ImageView
                     android:id="@+id/synchronize"
                     android:layout_width="0dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/exporttofolder"
                     android:layout_weight=".5"
@@ -106,7 +116,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:orientation="horizontal"
                 android:weightSum="1">
@@ -114,6 +123,9 @@
                 <ImageView
                     android:id="@+id/dataview"
                     android:layout_width="0dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/mapview"
                     android:layout_weight=".5"
