--- a/app/src/main/res/layout/dgps_map_legend.xml
+++ b/app/src/main/res/layout/dgps_map_legend.xml
@@ -12,6 +12,7 @@
         android:drawableLeft="@drawable/ic_view_list_black_24dp"
         android:drawablePadding="5dp"
         android:drawableTint="#fff"
+        android:fontFamily="@font/my_custom_font"
 
         android:drawableRight="@drawable/ic_close_black_24dp"
         android:paddingRight="10dp"
@@ -37,6 +38,7 @@
                   android:text="Unsurved Point"
                   android:textColor="#000000"
                   android:layout_marginLeft="10dip"
+                  android:fontFamily="@font/my_custom_font"
                   />
 
               <ImageView
@@ -58,7 +60,7 @@
                   android:layout_gravity="left|center"
                   android:text="Ponits having only attribute data"
                   android:textColor="#000000"
-
+                  android:fontFamily="@font/my_custom_font"
                   android:layout_marginLeft="10dip"
                   />
               <ImageView
@@ -80,6 +82,7 @@
                   android:layout_gravity="left|center"
                   android:text="Points having attribute,Static and RTX data"
                   android:textColor="#000000"
+                  android:fontFamily="@font/my_custom_font"
                   android:layout_marginLeft="10dip"
                   />
 
@@ -101,6 +104,7 @@
                 android:layout_gravity="left|center"
                 android:text="Points which are not feasible for Survey"
                 android:textColor="#000000"
+                android:fontFamily="@font/my_custom_font"
                 android:layout_marginLeft="10dip"
                 />
 
@@ -112,6 +116,7 @@
                 android:layout_marginLeft="10dip"
                 android:scaleType="fitXY"
                 android:layout_below="@+id/textUlbBoundary"
+
                 android:src="@drawable/map_grey"
                 />
         </LinearLayout>
